--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
         <div class="form-container">
             <div>
-            <button type="button" class="first-btn"><b>Try it free 7days</b><small>then $20/mo.there after</small></button>
+            <button type="button" class="first-btn"><b>Try it free 7days,</b><small>then $20/mo.there after</small></button>
             <form>
                 <div > 
                 <input type="text" placeholder="First Name" required minlength="3" maxlength="20">
